--- a/app/src/main/res/layout/day_view.xml
+++ b/app/src/main/res/layout/day_view.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
+    android:background="@drawable/day_border"
     android:textColor="#000000"
     android:textSize="16sp"
     />
