--- a/app/src/main/res/layout/day_view.xml
+++ b/app/src/main/res/layout/day_view.xml
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/dayText"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:background="@drawable/day_border"
-    android:textColor="#000000"
-    android:textSize="16sp"
-    />
+    android:background="@drawable/day_border">
+
+    <!-- 날짜 텍스트 -->
+    <TextView
+        android:id="@+id/dayText"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:visibility="visible" />
+
+    <!-- 이모티콘 이미지: 셀 꽉 채우고 투명 배경 -->
+    <ImageView
+        android:id="@+id/emojiImage"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitCenter"
+        android:visibility="invisible"
+        android:background="@android:color/transparent" />
+
+</FrameLayout>
