--- a/app/src/main/res/layout/activity_emoji_status.xml
+++ b/app/src/main/res/layout/activity_emoji_status.xml
@@ -12,7 +12,7 @@
         android:id="@+id/btnPickMonth"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#A5D6A7"
+        android:background="#8BC34A"
         android:text="연도/월 선택"
         android:textColor="#000000"
         app:backgroundTint="@null" />
@@ -29,7 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#000000"
-        android:background="#A5D6A7"
+        android:background="#8BC34A"
         app:backgroundTint="@null"
         android:text="책 추천 받기" />
 
